--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>April's portfolio</title>
 </head>
 <body>
+    <!-- Navbar -->
     <nav id="navbar">
         <div id="navbar__logo">
             <i class="fas fa-cat"></i>
@@ -27,9 +28,20 @@
             <li class="navbar__menu__item">Contact</li>
         </ul>
     </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/april_profile_image.png" alt="April's profile photo" class="home__avatar">
+        <h1 class="home__title">Hello, <br /> I'm Jiyeon Kim</h1>
+        <h2 class="home__description">A Developer currently residing in Seoul, Korea.</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
+    <!-- About -->
     <section id="about"></section>
+    <!-- Skills -->
     <section id="skills"></section>
+    <!-- Work -->
     <section id="work"></section>
+    <!-- Contact -->
     <section id="contact"></section>
 </body>
 </html>
