--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="imgs/favicon.png">
     <link rel="stylesheet" href="style.css">
-    <script scr="main.js" defer></script>
+    <script src="main.js" defer></script>
     <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
@@ -36,7 +36,59 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus rerum iusto fugiat veritatis incidunt nam ratione, a deleniti pariatur quae non tenetur neque nihil minima dignissimos? Odio dignissimos exercitationem temporibus.</p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__title">Character</div>
+                <ul class="major__list">
+                    <li>
+                        <span class="major__list__title">Sense of reponsibility </span>
+                        <span class="major__list__subtitle">책임감</span>
+                    </li>
+                    <li>
+                        <span class="major__list__title">Loyalty of work </span>
+                        <span class="major__list__subtitle">작업의 애착</span>
+                    </li>
+                    <li>
+                        <span class="major__list__title">Open-minded </span>
+                        <span class="major__list__subtitle">오픈마인드</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__title">Education</div>
+                <ul class="major__list">
+                    <li>
+                        <span class="major__list__title">Information Technology</span>
+                        <span class="major__list__subtitle">University of Southampton</span>
+                        <span class="major__list__detail">Individual Project: Using Comparative Softbiometrics for Face Recognition</span>
+                        <span class="major__list__time">Oct 2015 - Jun 2019</span>
+                    </li>
+                    <li>
+                        <span class="major__list__title">Business Management</span>
+                        <span class="major__list__subtitle">YMK COLLEGE/BTEC HND</span>
+                        <span class="major__list__time">Mar 2014 - Jan 2015</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__title">Experience</div>
+                <ul class="major__list">
+                    <li>
+                        <span class="major__list__title">DOHE KOREA </span>
+                        <span class="major__list__subtitle">Global Startup accelerator</span>
+                        <span class="major__list__time">Oct 2019 - Sep 2021</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
