--- a/index.html
+++ b/index.html
@@ -164,7 +164,25 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All<span class="category__count">3</span></button>
+            <button class="category__btn">Front-end<span class="category__count">3</span></button>
+            <button class="category__btn">Back-end<span class="category__count">3</span></button>
+            <button class="category__btn">Etc<span class="category__count">3</span></button>
+        </div>
+        <div class="work__projects">
+            <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
+                <img src="" alt="" class="project__img">
+                <div class="project__description">
+                    <h3>Project</h3>
+                    <span>Explanation</span>
+                </div>
+            </a>
+        </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
 </body>
