--- a/index.html
+++ b/index.html
@@ -184,6 +184,20 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">yeon19april@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/april-jiyeon-kim" target="blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <p class="contact__right">
+                2021 April - All right reserved
+            </p>
+        </div>
+    </section>
 </body>
 </html>
