--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>April's portfolio</title>
 </head>
 <body>
     <!-- Navbar -->
     <nav id="navbar">
-        <div id="navbar__logo">
+        <div class="navbar__logo">
             <i class="fas fa-cat"></i>
             <a href="#">April</a>
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item">Home</li>
+            <li class="navbar__menu__item active">Home</li>
             <li class="navbar__menu__item">About</li>
             <li class="navbar__menu__item">Skills</li>
             <li class="navbar__menu__item">My work</li>
