--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button class="home__contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About me</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus rerum iusto fugiat veritatis incidunt nam ratione, a deleniti pariatur quae non tenetur neque nihil minima dignissimos? Odio dignissimos exercitationem temporibus.</p>
         <div class="about__majors">
@@ -56,12 +56,11 @@
                     </li>
                     <li>
                         <span class="major__list__title">Open-minded </span>
-                        <span class="major__list__subtitle">오픈마인드</span>
+                        <span class="major__list__subtitle">열린 마음</span>
                     </li>
                 </ul>
             </div>
-        </div>
-        <div class="about__majors">
+
             <div class="major">
                 <div class="major__title">Education</div>
                 <ul class="major__list">
@@ -78,8 +77,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
-        <div class="about__majors">
+
             <div class="major">
                 <div class="major__title">Experience</div>
                 <ul class="major__list">
@@ -93,7 +91,7 @@
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci dignissimos non, quae rem dicta neque dolores, ad distinctio cumque dolorem odit fugiat quam fugit perspiciatis nemo a aliquid consequatur illo.</p>
@@ -167,7 +165,7 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -187,7 +185,7 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">yeon19april@gmail.com</h2>
         <div class="contact__links">
