--- a/index.html
+++ b/index.html
@@ -99,48 +99,48 @@
             <div class="skillset__left">
                 <h3 class="skillset__title">Skills</h3>
                 <div class="skill">
-                    <div class="skill_description">
+                    <div class="skill__description">
                         <span>HTML</span>
                         <span>95%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width:95%"></div>
                     </div>
                 </div>
                 <div class="skill">
-                    <div class="skill_description">
+                    <div class="skill__description">
                         <span>JavaScript</span>
                         <span>90%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width:90%"></div>
                     </div>
                 </div>
                 <div class="skill">
-                    <div class="skill_description">
+                    <div class="skill__description">
                         <span>CSS</span>
                         <span>90%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width:90%"></div>
                     </div>
                 </div>
                 <div class="skill">
-                    <div class="skill_description">
+                    <div class="skill__description">
                         <span>VUEJS</span>
                         <span>70%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width:70%"></div>
                     </div>
                 </div>
                 <div class="skill">
-                    <div class="skill_description">
+                    <div class="skill__description">
                         <span>NODEJS</span>
                         <span>70%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width:70%"></div>
                     </div>
                 </div>
             </div>
