--- a/index.html
+++ b/index.html
@@ -92,110 +92,114 @@
     </section>
     <!-- Skills -->
     <section id="skills" class="section">
-        <h1>Skills</h1>
-        <h2>Skills & Attributes</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci dignissimos non, quae rem dicta neque dolores, ad distinctio cumque dolorem odit fugiat quam fugit perspiciatis nemo a aliquid consequatur illo.</p>
-        <div class="skillset">
-            <div class="skillset__left">
-                <h3 class="skillset__title">Skills</h3>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>HTML</span>
-                        <span>95%</span>
+        <div class="section__container">
+            <h1>Skills</h1>
+            <h2>Skills & Attributes</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci dignissimos non, quae rem dicta neque dolores, ad distinctio cumque dolorem odit fugiat quam fugit perspiciatis nemo a aliquid consequatur illo.</p>
+            <div class="skillset">
+                <div class="skillset__left">
+                    <h3 class="skillset__title">Skills</h3>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>HTML</span>
+                            <span>95%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:95%"></div>
+                        </div>
                     </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width:95%"></div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>JavaScript</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:90%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>CSS</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:90%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>VUEJS</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:70%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>NODEJS</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:70%"></div>
+                        </div>
                     </div>
                 </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>JavaScript</span>
-                        <span>90%</span>
+                <div class="skillset__right">
+                    <div class="tools">
+                        <h3 class="skillset__title">Tools</h3>
+                        <ul class="tools__list">
+                            <li><span>Visual Studio Code</span></li>
+                            <li><span>MySQL Workbench</span></li>
+                            <li><span>Atom</span></li>
+                            <li><span>Jira</span></li>
+                        </ul>
                     </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width:90%"></div>
+                    <div class="etc">
+                        <h3 class="skillset__title">Etc</h3>
+                        <ul class="etc__list">
+                            <li><span>Git</span></li>
+                            <li><span>Scrum</span></li>
+                        </ul>
                     </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>CSS</span>
-                        <span>90%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width:90%"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>VUEJS</span>
-                        <span>70%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width:70%"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill__description">
-                        <span>NODEJS</span>
-                        <span>70%</span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value" style="width:70%"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="skillset__right">
-                <div class="tools">
-                    <h3 class="skillset__title">Tools</h3>
-                    <ul class="tools__list">
-                        <li><span>Visual Studio Code</span></li>
-                        <li><span>MySQL Workbench</span></li>
-                        <li><span>Atom</span></li>
-                        <li><span>Jira</span></li>
-                    </ul>
-                </div>
-                <div class="etc">
-                    <h3 class="skillset__title">Etc</h3>
-                    <ul class="etc__list">
-                        <li><span>Git</span></li>
-                        <li><span>Scrum</span></li>
-                    </ul>
                 </div>
             </div>
         </div>
     </section>
     <!-- Work -->
     <section id="work" class="section">
-        <h1>My work</h1>
-        <h3>Projects</h3>
-        <div class="work__categories">
-            <button class="category__btn active">All<span class="category__count">3</span></button>
-            <button class="category__btn">Front-end<span class="category__count">3</span></button>
-            <button class="category__btn">Back-end<span class="category__count">3</span></button>
-            <button class="category__btn">Etc<span class="category__count">3</span></button>
-        </div>
-        <div class="work__projects">
-            <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
-                <img src="imgs/april_profile_image.png" alt="" class="project__img">
-                <div class="project__description">
-                    <h3>Youtube Site</h3>
-                    <span>Clone coding with HTML, CSS</span>
-                </div>
-            </a>
-            <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="project__description">
-                    <h3>Responsive Navbar</h3>
-                    <span>HTML, CSS with media query</span>
-                </div>
-            </a>
-            <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="project__description">
-                    <h3>Shopping mall game</h3>
-                    <span>HTML, CSS, JavaScript, json</span>
-                </div>
-            </a>
+        <div class="section__container">
+            <h1>My work</h1>
+            <h3>Projects</h3>
+            <div class="work__categories">
+                <button class="category__btn active">All<span class="category__count">3</span></button>
+                <button class="category__btn">Front-end<span class="category__count">3</span></button>
+                <button class="category__btn">Back-end<span class="category__count">3</span></button>
+                <button class="category__btn">Etc<span class="category__count">3</span></button>
+            </div>
+            <div class="work__projects">
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
+                    <img src="imgs/april_profile_image.png" alt="" class="project__img">
+                    <div class="project__description">
+                        <h3>Youtube Site</h3>
+                        <span>Clone coding with HTML, CSS</span>
+                    </div>
+                </a>
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="project__description">
+                        <h3>Responsive Navbar</h3>
+                        <span>HTML, CSS with media query</span>
+                    </div>
+                </a>
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="project__description">
+                        <h3>Shopping mall game</h3>
+                        <span>HTML, CSS, JavaScript, json</span>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
     <!-- Contact -->
@@ -209,7 +213,7 @@
             <a href="">
                 <i class="fab fa-linkedin"></i>
             </a>
-            <p class="contact__right">
+            <p class="contact__rights">
                 2021 April - All right reserved
             </p>
         </div>
