--- a/index.html
+++ b/index.html
@@ -227,5 +227,10 @@
             </p>
         </div>
     </section>
+
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fas fa-arrow-circle-up"></i>
+    </button>
 </body>
 </html>
