--- a/index.html
+++ b/index.html
@@ -181,27 +181,55 @@
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn active">All<span class="category__count">3</span></button>
-                <button class="category__btn">Front-end<span class="category__count">3</span></button>
-                <button class="category__btn">Back-end<span class="category__count">3</span></button>
-                <button class="category__btn">Etc<span class="category__count">3</span></button>
+                <button class="category__btn active" data-filter="*">All<span class="category__count">3</span></button>
+                <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">3</span></button>
+                <button class="category__btn" data-filter="back-end">Back-end<span class="category__count">3</span></button>
+                <button class="category__btn" data-filter="etc">Etc<span class="category__count">3</span></button>
             </div>
             <div class="work__projects">
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="front-end">
                     <img src="imgs/april_profile_image.png" alt="" class="project__img">
                     <div class="project__description">
                         <h3>Youtube Site</h3>
                         <span>Clone coding with HTML, CSS</span>
                     </div>
                 </a>
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="front-end">
                     <img src="" alt="" class="project__img">
                     <div class="project__description">
                         <h3>Responsive Navbar</h3>
                         <span>HTML, CSS with media query</span>
                     </div>
                 </a>
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank">
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="front-end">
+                    <img src="" alt="" class="project__img">
+                    <div class="project__description">
+                        <h3>Shopping mall game</h3>
+                        <span>HTML, CSS, JavaScript, json</span>
+                    </div>
+                </a>
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="front-end">
+                    <img src="" alt="" class="project__img">
+                    <div class="project__description">
+                        <h3>Shopping mall game</h3>
+                        <span>HTML, CSS, JavaScript, json</span>
+                    </div>
+                </a>
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="back-end">
+                    <img src="" alt="" class="project__img">
+                    <div class="project__description">
+                        <h3>Shopping mall game</h3>
+                        <span>HTML, CSS, JavaScript, json</span>
+                    </div>
+                </a>
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="back-end">
+                    <img src="" alt="" class="project__img">
+                    <div class="project__description">
+                        <h3>Shopping mall game</h3>
+                        <span>HTML, CSS, JavaScript, json</span>
+                    </div>
+                </a>
+                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="etc">
                     <img src="" alt="" class="project__img">
                     <div class="project__description">
                         <h3>Shopping mall game</h3>
