HTML:About me description + Skills description + My work portfolio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="main.js" defer></script>
     <link
         rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +48,15 @@
     <section id="about" class="section">
         <div class="section__container">
             <h1>About me</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus rerum iusto fugiat veritatis incidunt nam ratione, a deleniti pariatur quae non tenetur neque nihil minima dignissimos? Odio dignissimos exercitationem temporibus.</p>
+            <p>
+                I am an <span class="text--highlight">open-minded person</span> who is open to the perspectives, values and traditions of other individuals and communities.
+                <br />
+                I try my best to listen and understand others.
+                <br />
+                <span class="text--highlight">Continuous learning and improvement</span> is important to me. 
+                <br />
+                I'm passionate about filling the gap between computer science and organisational applications of IT systems.
+            </p>
             <div class="about__majors">
                 <div class="major">
                     <div class="major__title">Character</div>
@@ -92,6 +100,15 @@
                             <span class="major__list__title">DOHE KOREA </span>
                             <span class="major__list__subtitle">Global Startup accelerator</span>
                             <span class="major__list__time">Oct 2019 - Sep 2021</span>
+                            <i class="fab fa-php logo"></i>
+                            <i class="fab fa-vuejs logo"></i>
+                        </li>
+                        <li>
+                            <span class="major__list__title">EZTech </span>
+                            <span class="major__list__subtitle">Vehicle Simulation</span>
+                            <span class="major__list__time">Jun 2018 - Sep 2018</span>
+                            <i class="fab fa-unity logo"></i>
+                            <i class="fab fa-ubuntu logo"></i>
                         </li>
                     </ul>
                 </div>
@@ -104,7 +121,13 @@
         <div class="section__container">
             <h1>Skills</h1>
             <h2>Skills & Attributes</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci dignissimos non, quae rem dicta neque dolores, ad distinctio cumque dolorem odit fugiat quam fugit perspiciatis nemo a aliquid consequatur illo.</p>
+            <p>
+                Passion for learning new technologies. Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
+                <br />
+                I love seeing the results of my efforts helping the user's experience.
+                <br /> 
+                I'm excited to make the leap and continue refining my skills with the right company.
+            </p>
             <div class="skillset">
                 <div class="skillset__left">
                     <h3 class="skillset__title">Skills</h3>
@@ -187,11 +210,11 @@
                 <button class="category__btn" data-filter="etc">Etc<span class="category__count">3</span></button>
             </div>
             <div class="work__projects">
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="front-end">
-                    <img src="imgs/april_profile_image.png" alt="" class="project__img">
+                <a href="https://april-jiyeon-kim.github.io/portfolio/" class="project" target="blank" data-type="front-end">
+                    <img src="imgs/projects/portfolio.png" alt="" class="project__img">
                     <div class="project__description">
-                        <h3>Youtube Site</h3>
-                        <span>Clone coding with HTML, CSS</span>
+                        <h3>Portfolio Site</h3>
+                        <span>HTML, CSS, JavsScript</span>
                     </div>
                 </a>
                 <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="front-end">
