--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <li>
                             <span class="major__list__title">Information Technology</span>
                             <span class="major__list__subtitle">University of Southampton</span>
-                            <span class="major__list__detail">Individual Project: Using Comparative Softbiometrics for Face Recognition</span>
+                            <span class="major__list__detail">Individual Project: Using Comparative Softbiometrics for Face Recognition  <i class="fab fa-python logo"></i></span>
                             <span class="major__list__time">Oct 2015 - Jun 2019</span>
                         </li>
                         <li>
@@ -210,7 +210,7 @@
                 <button class="category__btn" data-filter="etc">Etc<span class="category__count">3</span></button>
             </div>
             <div class="work__projects">
-                <a href="https://april-jiyeon-kim.github.io/portfolio/" class="project" target="blank" data-type="front-end">
+                <a href="https://github.com/april-jiyeon-kim/portfolio" class="project" target="blank" data-type="front-end">
                     <img src="imgs/projects/portfolio.png" alt="" class="project__img">
                     <div class="project__description">
                         <h3>Portfolio Site</h3>
@@ -270,7 +270,7 @@
             <a href="https://github.com/april-jiyeon-kim" target="blank">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/in/%EC%A7%80%EC%97%B0-%EA%B9%80-75822a94/">
                 <i class="fab fa-linkedin"></i>
             </a>
             <p class="contact__rights">
