HTML:Add my projects

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                             <span class="major__list__time">Oct 2019 - Sep 2021</span>
                             <i class="fab fa-php logo"></i>
                             <i class="fab fa-vuejs logo"></i>
+                            <i class="fab fa-bootstrap logo"></i>
                         </li>
                         <li>
                             <span class="major__list__title">EZTech </span>
@@ -204,10 +205,9 @@
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn selected" data-filter="*">All<span class="category__count">3</span></button>
-                <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">3</span></button>
-                <button class="category__btn" data-filter="back-end">Back-end<span class="category__count">3</span></button>
-                <button class="category__btn" data-filter="etc">Etc<span class="category__count">3</span></button>
+                <button class="category__btn selected" data-filter="*">All<span class="category__count">5</span></button>
+                <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">1</span></button>
+                <button class="category__btn" data-filter="etc">Etc<span class="category__count">4</span></button>
             </div>
             <div class="work__projects">
                 <a href="https://github.com/april-jiyeon-kim/portfolio" class="project" target="blank" data-type="front-end">
@@ -217,48 +217,43 @@
                         <span>HTML, CSS, JavsScript</span>
                     </div>
                 </a>
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="front-end">
-                    <img src="" alt="" class="project__img">
+                <a href="#" class="project" target="blank" data-type="etc">
+                    Groupware
                     <div class="project__description">
-                        <h3>Responsive Navbar</h3>
-                        <span>HTML, CSS with media query</span>
+                        <h3>Tingoware</h3>
+                        <span>Vue.js, bootstrap, PHP, Apache, MariaDB, and Jenkins. </span>
+                        <span>(DOHE KOREA)</span>
                     </div>
                 </a>
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="front-end">
-                    <img src="" alt="" class="project__img">
+                <a href="https://github.com/april-jiyeon-kim/nomad-airbnb-challenge" class="project" target="blank" data-type="etc">
+                    <img src="imgs/projects/django_movie_app.png" alt="" class="project__img">
                     <div class="project__description">
-                        <h3>Shopping mall game</h3>
-                        <span>HTML, CSS, JavaScript, json</span>
+                        <h3>Clone Airbnb</h3>
+                        <span>Python, Django, Tailwind</span>
                     </div>
                 </a>
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="front-end">
-                    <img src="" alt="" class="project__img">
+                <a href="https://github.com/april-jiyeon-kim/movie_app_2019" class="project" target="blank" data-type="etc">
+                    <img src="imgs/projects/movie_app.png" alt="" class="project__img">
                     <div class="project__description">
-                        <h3>Shopping mall game</h3>
-                        <span>HTML, CSS, JavaScript, json</span>
+                        <h3>Movie App</h3>
+                        <span>React JS</span>
                     </div>
                 </a>
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="back-end">
-                    <img src="" alt="" class="project__img">
+                <a href="https://github.com/april-jiyeon-kim/april-jiyeon-kim.github.io" class="project" target="blank" data-type="etc">
+                    <img src="imgs/projects/weather_app.png" alt="" class="project__img">
                     <div class="project__description">
-                        <h3>Shopping mall game</h3>
-                        <span>HTML, CSS, JavaScript, json</span>
+                        <h3>Weather App</h3>
+                        <span>Vanilla JS</span>
                     </div>
                 </a>
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="back-end">
-                    <img src="" alt="" class="project__img">
+                <a href="https://github.com/april-jiyeon-kim/rank-pet" class="project" target="blank" data-type="etc">
+                    Ranking for Pet supllies app
                     <div class="project__description">
-                        <h3>Shopping mall game</h3>
-                        <span>HTML, CSS, JavaScript, json</span>
+                        <h3>To be continued...🔨</h3>
+                        <span>Set up the environment <br />with Vue.js, Express, MySQL</span>
                     </div>
                 </a>
-                <a href="https://github.com/april-jiyeon-kim" class="project" target="blank" data-type="etc">
-                    <img src="" alt="" class="project__img">
-                    <div class="project__description">
-                        <h3>Shopping mall game</h3>
-                        <span>HTML, CSS, JavaScript, json</span>
-                    </div>
-                </a>
+
             </div>
         </div>
     </section>
