--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h1>Skills</h1>
             <h2>Skills & Attributes</h2>
             <p>
-                Passion for learning new technologies. Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
+                Passion for <span class="text--highlight">learning new technologies.</span> Ability to <span class="text--highlight">plan and time schedule</span>, work under strict time pressure and adapt quickly when needed.
                 <br />
                 I love seeing the results of my efforts helping the user's experience.
                 <br /> 
@@ -161,7 +161,25 @@
                     </div>
                     <div class="skill">
                         <div class="skill__description">
-                            <span>VUEJS</span>
+                            <span>MySQL</span>
+                            <span>85%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:85%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>Unity</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:80%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>C#</span>
                             <span>70%</span>
                         </div>
                         <div class="skill__bar">
@@ -170,28 +188,59 @@
                     </div>
                     <div class="skill">
                         <div class="skill__description">
-                            <span>NODEJS</span>
+                            <span>Python</span>
                             <span>70%</span>
                         </div>
                         <div class="skill__bar">
                             <div class="skill__value" style="width:70%"></div>
                         </div>
                     </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>VueJS</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:70%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>NodeJS</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:60%"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill__description">
+                            <span>Java</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width:60%"></div>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="skillset__right">
                     <div class="tools">
                         <h3 class="skillset__title">Tools</h3>
                         <ul class="tools__list">
-                            <li><span>Visual Studio Code</span></li>
-                            <li><span>MySQL Workbench</span></li>
-                            <li><span>Atom</span></li>
-                            <li><span>Jira</span></li>
+                            <li>Visual Studio Code</li>
+                            <li>Visual Studio</li>
+                            <li>Eclipse</li>
+                            <li>PyCharm</li>
+                            <li>Atom</li>
+                            <li>Jira</li>
                         </ul>
                     </div>
                     <div class="etc">
                         <h3 class="skillset__title">Etc</h3>
                         <ul class="etc__list">
-                            <li><span>Git</span></li>
+                            <li><span>Git(Version Control System)</span></li>
+                            <li><span></span></li>
                             <li><span>Scrum</span></li>
                         </ul>
                     </div>
@@ -205,9 +254,9 @@
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn selected" data-filter="*">All<span class="category__count">5</span></button>
+                <button class="category__btn selected" data-filter="*">All<span class="category__count">6</span></button>
                 <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">1</span></button>
-                <button class="category__btn" data-filter="etc">Etc<span class="category__count">4</span></button>
+                <button class="category__btn" data-filter="etc">Etc<span class="category__count">5</span></button>
             </div>
             <div class="work__projects">
                 <a href="https://github.com/april-jiyeon-kim/portfolio" class="project" target="blank" data-type="front-end">
