STYLE: Add highlight color

--- a/index.html
+++ b/index.html
@@ -122,8 +122,10 @@
         <div class="section__container">
             <h1>Skills</h1>
             <h2>Skills & Attributes</h2>
-            <p>
-                Passion for <span class="text--highlight">learning new technologies.</span> Ability to <span class="text--highlight">plan and time schedule</span>, work under strict time pressure and adapt quickly when needed.
+            <p class="skills__detail">
+                Passion for <span class="text--highlight">learning new technologies.</span>
+                <br />
+                Ability to <span class="text--highlight">plan and time schedule</span>, work under strict time pressure and adapt quickly when needed.
                 <br />
                 I love seeing the results of my efforts helping the user's experience.
                 <br /> 
@@ -240,7 +242,6 @@
                         <h3 class="skillset__title">Etc</h3>
                         <ul class="etc__list">
                             <li><span>Git(Version Control System)</span></li>
-                            <li><span></span></li>
                             <li><span>Scrum</span></li>
                         </ul>
                     </div>
