Add jenkins logo to experience

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                             <i class="fab fa-php logo"></i>
                             <i class="fab fa-vuejs logo"></i>
                             <i class="fab fa-bootstrap logo"></i>
+                            <i class="fab fa-jenkins logo"></i>
                         </li>
                         <li>
                             <span class="major__list__title">EZTech </span>
