--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn selected" data-filter="*">All<span class="category__count">6</span></button>
-                <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">1</span></button>
+                <button class="category__btn selected" data-filter="*">All<span class="category__count">7</span></button>
+                <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">2</span></button>
                 <button class="category__btn" data-filter="etc">Etc<span class="category__count">5</span></button>
             </div>
             <div class="work__projects">
@@ -302,6 +302,13 @@
                     <div class="project__description">
                         <h3>To be continued...🔨</h3>
                         <span>Set up the environment <br />with Vue.js, Express, MySQL</span>
+                    </div>
+                </a>
+                <a href="https://github.com/april-jiyeon-kim/mini-games" class="project" target="blank" data-type="front-end">
+                    <img src="imgs/projects/catch_carrot.png" alt="" class="project__img">
+                    <div class="project__description">
+                        <h3>Mini Games</h3>
+                        <span>Vanilla JS</span>
                     </div>
                 </a>
 
