--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <br />
                 I try my best to listen and understand others.
                 <br />
-                <span class="text--highlight">Continuous learning and improvement</span> is important to me. 
+                <span class="text--highlight">Continuous learning and improvement</span> are important to me. 
                 <br />
                 I'm passionate about filling the gap between computer science and organisational applications of IT systems.
             </p>
