--- a/index.html
+++ b/index.html
@@ -416,7 +416,9 @@
         >
           <i class="fab fa-linkedin"></i>
         </a>
-        <p class="contact__rights">2021 April - All right reserved</p>
+        <p class="contact__rights">
+          <span class="this-year"></span> April - All right reserved
+        </p>
       </div>
     </section>
 
