--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@
         <h3>Projects</h3>
         <div class="work__categories">
           <button class="category__btn selected" data-filter="*">
-            All<span class="category__count">7</span>
+            All<span class="category__count">8</span>
           </button>
           <button class="category__btn" data-filter="front-end">
             Front-end<span class="category__count">2</span>
           </button>
           <button class="category__btn" data-filter="etc">
-            Etc<span class="category__count">5</span>
+            Etc<span class="category__count">6</span>
           </button>
         </div>
         <div class="work__projects">
@@ -398,6 +398,22 @@
             <div class="project__description">
               <h3>Mini Games</h3>
               <span>Vanilla JS</span>
+            </div>
+          </a>
+          <a
+            href="https://github.com/april-jiyeon-kim/habit-tracker"
+            class="project"
+            target="blank"
+            data-type="etc"
+          >
+            <img
+              src="imgs/projects/habit_tracker.png"
+              alt=""
+              class="project__img"
+            />
+            <div class="project__description">
+              <h3>Habit Tracker</h3>
+              <span>React JS</span>
             </div>
           </a>
         </div>
