Add React JS Youtube clone project

--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
         <h3>Projects</h3>
         <div class="work__categories">
           <button class="category__btn selected" data-filter="*">
-            All<span class="category__count">8</span>
+            All<span class="category__count">9</span>
           </button>
           <button class="category__btn" data-filter="front-end">
-            Front-end<span class="category__count">2</span>
+            Front-end<span class="category__count">3</span>
           </button>
           <button class="category__btn" data-filter="etc">
             Etc<span class="category__count">6</span>
@@ -273,6 +273,22 @@
                 >Vue.js, bootstrap, PHP, Apache, MariaDB, and Jenkins.
               </span>
               <span>(DOHE KOREA)</span>
+            </div>
+          </a>
+          <a
+            href="https://github.com/april-jiyeon-kim/nomad-airbnb-challenge"
+            class="project"
+            target="blank"
+            data-type="front-end"
+          >
+            <img
+              src="imgs/projects/react_youtube_clone.png"
+              alt=""
+              class="project__img"
+            />
+            <div class="project__description">
+              <h3>Youtube Clone</h3>
+              <span>Youtube Clone built using React JS</span>
             </div>
           </a>
           <a
