Add Voithru experience

--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
             <div class="major__title">Experience</div>
             <ul class="major__list">
               <li>
+                <span class="major__list__title">Voithru </span>
+                <span class="major__list__subtitle"
+                  >Multimedia Translation Platform</span
+                >
+                <span class="major__list__time">Jan 2022 - Current</span>
+              </li>
+              <li>
                 <span class="major__list__title">DOHE KOREA </span>
                 <span class="major__list__subtitle"
                   >Global Startup accelerator</span
