--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <li>
                 <span class="major__list__title">Voithru </span>
                 <span class="major__list__subtitle"
-                  >Multimedia Translation Platform</span
+                  >Multimedia Translation Platform(Front-End Engineer)</span
                 >
                 <span class="major__list__time">Jan 2022 - Current</span>
               </li>
