Add spec on Experience

--- a/index.html
+++ b/index.html
@@ -125,6 +125,21 @@
                   >Multimedia Translation Platform(Front-End Engineer)</span
                 >
                 <span class="major__list__time">Jan 2022 - Current</span>
+                <i class="fab fa-react"></i>
+                <img
+                  src="imgs/logos/next-js.svg"
+                  alt=""
+                  class="project__img project__img--logo"
+                  width="16px"
+                  height="16px"
+                />
+                <img
+                  src="imgs/logos/typescript.png"
+                  alt=""
+                  class="project__img project__img--logo"
+                  width="16px"
+                  height="16px"
+                />
               </li>
               <li>
                 <span class="major__list__title">DOHE KOREA </span>
