Add React Skill

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 />
               </li>
               <li>
-                <span class="major__list__title">DOHE KOREA </span>
+                <span class="major__list__title">DOHE KOREA</span>
                 <span class="major__list__subtitle"
                   >Global Startup accelerator</span
                 >
@@ -221,6 +221,15 @@
               </div>
               <div class="skill__bar">
                 <div class="skill__value" style="width: 60%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>ReactJS</span>
+                <span>50%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 50%"></div>
               </div>
             </div>
           </div>
