--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <li>
                 <span class="major__list__title">Voithru </span>
                 <span class="major__list__subtitle"
-                  >Multimedia Translation Platform(Front-End Engineer)</span
+                  >Multimedia Translation Platform(Front-End)</span
                 >
                 <span class="major__list__time">Jan 2022 - Current</span>
                 <i class="fab fa-react"></i>
@@ -144,7 +144,7 @@
               <li>
                 <span class="major__list__title">DOHE KOREA</span>
                 <span class="major__list__subtitle"
-                  >Global Startup accelerator</span
+                  >Global Startup accelerator(Full-Stack)</span
                 >
                 <span class="major__list__time">Oct 2019 - Sep 2021</span>
                 <i class="fab fa-php logo"></i>
@@ -226,7 +226,7 @@
             <div class="skill">
               <div class="skill__description">
                 <span>ReactJS</span>
-                <span>50%</span>
+                <span>55%</span>
               </div>
               <div class="skill__bar">
                 <div class="skill__value" style="width: 50%"></div>
