--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
             </div>
             <div class="skill">
               <div class="skill__description">
+                <span>TypeScript</span>
+                <span>50%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 50%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
                 <span>MySQL</span>
                 <span>85%</span>
               </div>
