--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <i class="fab fa-linkedin"></i>
         </a>
         <p class="contact__rights">
-          <span class="this-year"></span> April - All right reserved
+          <span class="this-year"></span> Jiyeon - All right reserved
         </p>
       </div>
     </section>
